much content update, some new global styles

--- a/src/content/post/astrowind-template-in-depth.mdx
+++ b/src/content/post/astrowind-template-in-depth.mdx
@@ -142,9 +142,9 @@ You'll note that the index file imports a lot of components, each one roughly an
 ```astro
 <CallToAction
   callToAction={{
-    text: 'Get template',
+    text: 'Get A Quote',
     href: 'https://github.com/mikepeiman/catalyst',
-    icon: 'tabler:download',
+    icon: 'tabler:bolt',
   }}
 >
   <Fragment slot="title">
